# dolly

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  extra-requirements.txt  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
scripts/00-setup/: build_sif.sh  create_volumes.sh
scripts/01-preprocessing/: init_dataset.sh
scripts/docker-setup/: clean_apt.sh  install_deps.sh  install_java.sh  install_joern.sh  install_python.sh
src/dolly/: cli.py  dataset.py  evaluate.py  metrics.py  train.py
src/dolly.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/dolly/graphs/: export.py  parse.py  pyg.py
src/dolly/graphs/joern_scripts/: export.sc  joern_export.sh  joern_parse.sh
src/dolly/models/: __init__.py  base.py  gnn.py  llm.py
