[project]
name = "dolly"
version = "0.0.1"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
dolly = "dolly.cli:app"

[tool.setuptools.package-data]
cpgtools = ["graphs/joern_scripts/*.sc", "graphs/joern_scripts/*.sh"]

[build-system]
requires = ["setuptools >= 40.9.0"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py311"]
line-length = 120

[tool.flake8]
max-line-length = 120
